# autophylo

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  environment.yml  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
config/: autophylo.conf
src/autophylo/: __init__.py  autophylo.py  label.py  plot.py  tree_builder.py
src/autophylo/cli/: __init__.py
tests/: test.fasta
